[package]
name = "smolwire"
version = "0.10.0"
edition = "2021"
rust-version = "1.65"
authors = ["whitequark <whitequark@whitequark.org>"]
description = "A TCP/IP stack designed for bare-metal, real-time systems without a heap."
documentation = "https://docs.rs/smoltcp/"
homepage = "https://github.com/smoltcp-rs/smoltcp"
repository = "https://github.com/smoltcp-rs/smoltcp.git"
readme = "README.md"
keywords = ["ip", "tcp", "udp", "ethernet", "network"]
categories = ["embedded", "network-programming"]
license = "0BSD"
# Each example should have an explicit `[[example]]` section here to
# ensure that the correct features are enabled.
autoexamples = false

[dependencies]
log = { version = "0.4.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true }

byteorder = { version = "1.0", default-features = false }
bitflags = { version = "1.0", default-features = false }
heapless = "0.7.15"

smolutils = { path = "../smolutils", default-features = false }

[dev-dependencies]
env_logger = "0.10"
getopts = "0.2"
rand = "0.8"
url = "2.0"
rstest = "0.17"

[features]
std = ["smolutils/std", "alloc"]
alloc = ["defmt?/alloc"]
defmt = [
  "smolutils/defmt",
  "dep:defmt",
  "heapless/defmt",
  "heapless/defmt-impl",
]

"medium-ethernet" = ["smolutils/medium-ethernet"]
"medium-ip" = ["smolutils/medium-ip"]
"medium-ieee802154" = ["smolutils/medium-ieee802154", "proto-sixlowpan"]

"proto-ipv4" = ["smolutils/proto-ipv4"]
"proto-igmp" = ["proto-ipv4"]
"proto-dhcpv4" = ["proto-ipv4"]
"proto-ipv6" = ["smolutils/proto-ipv6"]
"proto-rpl" = []
"proto-sixlowpan" = ["proto-ipv6"]
"proto-dns" = []

default = [
  "std",
  "log", # needed for `cargo test --no-default-features --features default` :/

  "medium-ethernet",
  "medium-ip",
  "medium-ieee802154",

  "proto-ipv4",
  "proto-igmp",
  "proto-dhcpv4",
  "proto-ipv6",
  "proto-dns",
]
